--- a/insurance.ipynb
+++ b/insurance.ipynb
@@ -1365,8 +1365,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The prediction by Knn and random forest regression model was also good with accuracy of 0.82 and 0.85 resppectively.\n",
-    "The best result came out using SVM with accuracy of 0.86"
+    "The prediction by Knn and SVM model was good.\n",
+    "The best result came out by using Random Forest regression model with 84 percent accuracy."
+    
    ]
   },
   {
